corrected the styling (doesn't overflow now)

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin-bottom: 40px;
   padding: 0;
   font-family: -apple-sytem, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
